# tap-fred

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  VALIDATION_GUIDE.md  codex_conversation.txt  lint.sh  meltano.yml  meltano_prioritized.yml  pyproject.toml  tox.ini
.claude/: CLAUDE.md  testing_steps.md
.github/workflows/: analyze-changelog-with-claude.yml  changelog-reminder.yml
tap_fred/: __init__.py  __main__.py  client.py  discovery.py  helpers.py  streams.py  tap.py
tap_fred/streams/: __init__.py  category_streams.py  maps_streams.py  releases_streams.py  series_streams.py  sources_streams.py  tags_streams.py
tests/: __init__.py  reconciliation_check.py  test.py  test_comprehensive.py  test_core.py  test_integration.py  test_pit_equivalence.py  test_throttle_jitter.py
