[project]
name = "tap-fred"
version = "0.0.1"
description = "Singer tap for FRED, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Matt Elgazar", email = "melgazar9@gmail.com" }]
keywords = [
    "ELT",
    "FRED",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.11,<4.0"
dependencies = [
    "singer-sdk~=0.46.3",
    "requests~=2.32.3",
    "backoff>=2.2.1,<3.0.0",
]

[project.optional-dependencies]
s3 = [
    "fs-s3fs~=1.1.1",
]

[project.scripts]
# CLI declaration
tap-fred = 'tap_fred.tap:TapFRED.cli'

[dependency-groups]
dev = [
    "pytest>=8",
    "singer-sdk[testing]",
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
